2001-08-05  Bruno Haible  <haible@clisp.cons.org>

	* eval.d (eval_fsubr): Change error message: talk about special
	operator, not special form.

2001-08-21  Sam Steingold  <sds@gnu.org>

	* makemake.in (XCFLAGS): with win32gcc, do not need
	-D_NO_OLDNAMES: there is no sleep() in stdlib.h and
	_NO_OLDNAMES_ kills struct timeb in timeb.h

2001-08-21  Sam Steingold  <sds@gnu.org>

	fixed bug #446942
	* makemake.in (DISTFILE): isulate from AIX uname which does not
	have the -p option

2001-08-21  Sam Steingold  <sds@gnu.org>

	some symbols appeared in wrong packages - fix this
	* international.lisp (textdomain, textdomaindir): use package
	prefix before SET-TEXTDOMAIN and SET-TEXTDOMAINDIR
	* clos.lisp (signature): import from COMPILER

2001-08-20  Sam Steingold  <sds@gnu.org>

	* loadform.lisp (mlf-unquote, mlf-init-function): new functions
	(make-init-form): warn about errors in MLF-INIT-FUNCTION

2001-08-20  Sam Steingold  <sds@gnu.org>

	* places.lisp (setf-symbol): intern the result when the argument
	is interned

2001-08-05  Bruno Haible  <haible@clisp.cons.org>

	* constsym.d: Reorder according to the definition order in the files.

2001-08-05  Bruno Haible  <haible@clisp.cons.org>

	* win32.d: Test __MINGW32__, not __mingw32__.

2001-08-18  Sam Steingold  <sds@gnu.org>

	* loadform.lisp (make-load-form-saving-slots): compute the slot
	list differently for STANDARD-OBJECTs and STRUCTURE-OBJECTs;
	quote slot values

2001-08-17  Sam Steingold  <sds@gnu.org>

	implemented the ANSI CL pretty-printer
	* constobj.d (version): bumped
	(type_pprint_newline, type_pprint_indent): added
	* constsym.d (PPRINT-DISPATCH, PPRINT-INDENT, PPRINT-NEWLINE,
	%PPRINT-LOGICAL-BLOCK, :MISER-WIDTH, :PPRINT-DISPATCH, :LINEAR,
	:FILL, :MISER, :MANDATORY, :BLOCK, :CURRENT, *PRIN-LINE-PREFIX*,
	*PRIN-MISERP*, *PRIN-PPRINTER*): new symbols
	* defs2.lisp (with-standard-io-syntax): bind *PRINT-MISER-WIDTH*
	and *PRINT-PPRINT-DISPATCH*